Semi fix zoom into map.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     role="tabpanel"
                 >
                     <div class="row g-0">
-                        <!-- Left Col: Map & Data -->
+                        <!-- Left Col: Map, Stats, Laps & Records -->
                         <div class="col-xl-5 col-lg-5 pe-lg-4">
                             <!-- Map -->
                             <div class="mb-4 d-none" id="mapContainer">
@@ -230,46 +230,11 @@
                                     ></table>
                                 </div>
                             </div>
-                        </div>
 
-                        <!-- Right Col: Charts & Details -->
-                        <div class="col-xl-7 col-lg-7">
-                            <!-- Placeholder -->
-                            <div
-                                id="charts-placeholder"
-                                class="d-flex flex-column justify-content-center align-items-center text-muted"
-                                style="min-height: 60vh"
-                            >
-                                <div class="mb-3 p-4 rounded-circle bg-light">
-                                    <svg
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        width="48"
-                                        height="48"
-                                        fill="#adb5bd"
-                                        class="bi bi-bar-chart-line"
-                                        viewBox="0 0 16 16"
-                                    >
-                                        <path
-                                            d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1V2zm1 12h2V2h-2v12zm-3 0V7H7v7h2zm-5 0v-3H2v3h2z"
-                                        />
-                                    </svg>
-                                </div>
-                                <p class="fs-5 fw-light mb-1">
-                                    No Activity Loaded
-                                </p>
-                                <p class="small text-secondary">
-                                    Upload a .FIT file to visualize your
-                                    performance.
-                                </p>
-                            </div>
-
-                            <!-- Charts -->
-                            <div id="charts-container"></div>
-
-                            <!-- Selection Table (Detailed Records) -->
+                            <!-- Selection Table (Detailed Records) MOVED HERE -->
                             <div
                                 id="selectionTableContainer"
-                                class="mt-5 d-none animate-fade-in"
+                                class="mb-4 d-none animate-fade-in"
                             >
                                 <div
                                     class="d-flex align-items-center justify-content-between mb-2"
@@ -318,6 +283,41 @@
                                     ></table>
                                 </div>
                             </div>
+                        </div>
+
+                        <!-- Right Col: Charts -->
+                        <div class="col-xl-7 col-lg-7">
+                            <!-- Placeholder -->
+                            <div
+                                id="charts-placeholder"
+                                class="d-flex flex-column justify-content-center align-items-center text-muted"
+                                style="min-height: 60vh"
+                            >
+                                <div class="mb-3 p-4 rounded-circle bg-light">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="48"
+                                        height="48"
+                                        fill="#adb5bd"
+                                        class="bi bi-bar-chart-line"
+                                        viewBox="0 0 16 16"
+                                    >
+                                        <path
+                                            d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1V2zm1 12h2V2h-2v12zm-3 0V7H7v7h2zm-5 0v-3H2v3h2z"
+                                        />
+                                    </svg>
+                                </div>
+                                <p class="fs-5 fw-light mb-1">
+                                    No Activity Loaded
+                                </p>
+                                <p class="small text-secondary">
+                                    Upload a .FIT file to visualize your
+                                    performance.
+                                </p>
+                            </div>
+
+                            <!-- Charts -->
+                            <div id="charts-container"></div>
                         </div>
                     </div>
                 </div>
