Fixing zoom, refactor.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         />
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="assets/style.css" />
     </head>
     <body>
         <!-- Loader Overlay -->
@@ -442,6 +442,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/json.min.js"></script>
 
         <!-- App Logic -->
-        <script type="module" src="app.js"></script>
+        <script type="module" src="src/app.js"></script>
     </body>
 </html>
