Refactor to use style.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         />
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="assets/style.css" />
+        <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
         <!-- Loader Overlay -->
